Finished converting css into sass

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -18,7 +18,7 @@ a {
 }
 
 
-/* ============================================= */
+/* =============================================
 /*              Typography                       */
 /* ============================================= */
 
@@ -45,7 +45,7 @@ a {
   padding-left: 20px;
   border-left: 8px solid #58e1c1;
   border-radius: 5px;
-}
+} */
 
 
 /* ============================================= */
